--- a/index.html
+++ b/index.html
@@ -9,7 +9,44 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header> <!--Inicio cabeçalho-->
+      <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+        <div class="container">
+          <a href="#" class="navbar-brand">
+            <img src="assets/img/logo.png" width="142" alt="finans-img-logo">
+          </a>
+          <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#principal-nav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="principal-nav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Recursos</a>
+              </li>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Benefícios</a>
+              </li>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Preços</a>
+              </li>
+              <li class="nav-item">
+                <a href="index.html" class="btn btn-outline-light ms-4">Entrar</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header> <!--FIm cabeçalho-->
+    <section id="home"> <!--Inicio seção home-->
+      <div class="container">
+        <div class="row">
+
+        </div>
+      </div>
+    </section> <!--FIm seção home-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
