final update home
finalizado cabeçalho e a seção home

--- a/index.html
+++ b/index.html
@@ -43,7 +43,32 @@
     <section id="home"> <!--Inicio seção home-->
       <div class="container">
         <div class="row">
-
+          <div class="col-md-6 d-flex"> <!-- inicio textos-->
+            <div class="align-self-center">
+              <h1 class="display-4">Suas contas, descomplicadas</h1>
+              <p>
+                Usado por mais de 1 milhão de pessoas, o Finnans é uma ferramenta online que vai facilitar sua vida financeira.
+              </p>
+              <form class="mt-4 mb-4">
+                <div class="input-group input-group-lg">
+                  <input class="form-control" type="email" placeholder="Seu e-mail" name="get-email" id="emailtxt">
+                  <button type="button" class="btn btn-primary">Cadastre-se</button>
+                </div>
+              </form>
+              <p>
+                Disponivel para
+                <a href="" class="btn btn-outline-light">
+                  <i class="bi bi-android2"></i>
+                </a>
+                <a href="" class="btn btn-outline-light">
+                  <i class="bi bi-apple"></i>
+                </a>
+              </p>
+            </div>
+          </div> <!-- FIm textos-->
+          <div class="col-md-6 d-none d-md-block">
+            <img src="assets/img/capa-mulher.png" alt="img-women">
+          </div>
         </div>
       </div>
     </section> <!--FIm seção home-->
