--- a/index.html
+++ b/index.html
@@ -72,6 +72,25 @@
         </div>
       </div>
     </section> <!--FIm seção home-->
+    <section class="box"> <!--Inicio seção saiba mais -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Saiba para onde vai o seu dinheiro</h2>
+              <p>
+                Com o finans, você categoriza todos os seus lançamentos.
+                Com gráficos simples, você sabe de onde vem e para onde vai o seu
+                dinheiro.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="assets/img/saiba.png" alt="saiba-img" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section> <!-- Fim seção saiba mais-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
