--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 Com gráficos simples, você sabe de onde vem e para onde vai o seu
                 dinheiro.
               </p>
+              <a href="" class="btn btn-primary">Veja mais<a>
             </div>
           </div>
           <div class="col-md-6">
@@ -91,6 +92,25 @@
         </div>
       </div>
     </section> <!-- Fim seção saiba mais-->
+    <section class="box"> <!--Inicio seção juros -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="col-md-6">
+              <img src="assets/img/saiba.png" alt="saiba-img" class="img-fluid">
+            </div>
+            <div class="align-self-center">
+              <h2>Pare de pagar juros e economize</h2>
+              <p>
+                Manter as contas em dia é sempre um problema? O finans avisa você:
+                receba alertas de contas a pagar e a receber!
+              </p>
+              <a href="" class="btn btn-primary">Veja mais<a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- Fim seção juros-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
