--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <section class="box"> <!--Inicio seção juros -->
       <div class="container">
         <div class="row">
-          <div class="col-md-6 d-flex">
-            <div class="col-md-6">
-              <img src="assets/img/saiba.png" alt="saiba-img" class="img-fluid">
+          <div class="col-md-6">
+            <div class="col-md-6 d-flex">
+              <img src="assets/img/juros.png" alt="juros-img" class="img-fluid">
             </div>
             <div class="align-self-center">
               <h2>Pare de pagar juros e economize</h2>
@@ -111,6 +111,13 @@
         </div>
       </div>
     </section> <!-- Fim seção juros-->
+    <section class="box"> <!--Inicio seção final -->
+      <div class="container">
+        <div class="row">
+          
+        </div>
+      </div>
+    </section> <!-- Fim seção final-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
