--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
         </div>
       </div>
     </section> <!--FIm seção home-->
-    <section class="box"> <!--Inicio seção saiba mais -->
+
+    <!-- <section class="box"> Inicio seção saiba mais 
       <div class="container">
         <div class="row">
-          <div class="col-md-6 d-flex">
+          <div class="col col-md-6 d-flex">
             <div class="align-self-center">
               <h2>Saiba para onde vai o seu dinheiro</h2>
               <p>
@@ -86,17 +87,17 @@
               <a href="" class="btn btn-primary">Veja mais<a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col col-md-6">
             <img src="assets/img/saiba.png" alt="saiba-img" class="img-fluid">
           </div>
         </div>
       </div>
-    </section> <!-- Fim seção saiba mais-->
-    <section class="box"> <!--Inicio seção juros -->
+    </section>  Fim seção saiba mais
+    <section class="box"> Inicio seção juros
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <div class="col-md-6 d-flex">
+          <div class="col col-md-6">
+            <div class="col col-md-6 d-flex">
               <img src="assets/img/juros.png" alt="juros-img" class="img-fluid">
             </div>
             <div class="align-self-center">
@@ -110,7 +111,8 @@
           </div>
         </div>
       </div>
-    </section> <!-- Fim seção juros-->
+    </section> Fim seção juros -->
+    
     <section class="box"> <!--Inicio seção final -->
       <div class="container">
         <div class="row">
