--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         </div>
       </div>
     </section> <!--FIm seção home-->
-
-    <!-- <section class="box"> Inicio seção saiba mais 
+    <section class="box"> <!--Inicio seção saiba mais -->
       <div class="container">
         <div class="row">
           <div class="col col-md-6 d-flex">
@@ -92,8 +91,8 @@
           </div>
         </div>
       </div>
-    </section>  Fim seção saiba mais
-    <section class="box"> Inicio seção juros
+    </section> <!-- Fim seção saiba mais-->
+    <section class="box"> <!--Inicio seção juros -->
       <div class="container">
         <div class="row">
           <div class="col col-md-6">
@@ -111,8 +110,7 @@
           </div>
         </div>
       </div>
-    </section> Fim seção juros -->
-    
+    </section> <!-- Fim seção juros-->
     <section class="box"> <!--Inicio seção final -->
       <div class="container">
         <div class="row">
