--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="box"> <!--Inicio seção saiba mais -->
       <div class="container">
         <div class="row">
-          <div class="col col-md-6 d-flex">
+          <div class="col-md-6 d-flex">
             <div class="align-self-center">
               <h2>Saiba para onde vai o seu dinheiro</h2>
               <p>
@@ -86,7 +86,7 @@
               <a href="" class="btn btn-primary">Veja mais<a>
             </div>
           </div>
-          <div class="col col-md-6">
+          <div class="col-md-6">
             <img src="assets/img/saiba.png" alt="saiba-img" class="img-fluid">
           </div>
         </div>
@@ -95,8 +95,8 @@
     <section class="box"> <!--Inicio seção juros -->
       <div class="container">
         <div class="row">
-          <div class="col col-md-6">
-            <div class="col col-md-6 d-flex">
+          <div class="col-md-6">
+            <div class="col-md-6 d-flex">
               <img src="assets/img/juros.png" alt="juros-img" class="img-fluid">
             </div>
             <div class="align-self-center">
@@ -114,12 +114,36 @@
     <section class="box"> <!--Inicio seção final -->
       <div class="container">
         <div class="row">
-          <div>
-            Conteudo 1
+          <div class="col-md-4">
+            <img src="assets/img/facil.png" alt="facil-img" class="img-fluid">
+            <h4>Fácil de usar</h4>
+            <p>
+              O Finans vai além de limites básico e permite que você faça controles incríveis,
+              essenciais para a suas finanças. Simples como tem que ser!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="assets/img/economize.png" alt="economize-img" class="img-fluid">
+            <h4>Economize seu tempo</h4>
+            <p>
+              Tempo é dinheiro! Em segundos, você tem tudo sobre controle e aproveite seu tempo
+              com o que realmente importa para você!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="assets/img/suporte.png" alt="suporte-img" class="img-fluid">
+            <h4>Suporte amigo</h4>
+            <p>
+              Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui
+              para resolver seus problemas e deixar sua vida bem mais fácil!
+            </p>
           </div>
         </div>
       </div>
     </section> <!-- Fim seção final-->
+    <footer>
+      
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
