update index and creating login area

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <a href="index.html" class="nav-link">Recursos</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Benefícios</a>
+                <a href="benefits.html" class="nav-link">Benefícios</a>
               </li>
               <li class="nav-item">
                 <a href="index.html" class="nav-link">Preços</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="btn btn-outline-light ms-4">Entrar</a>
+                <a href="login.html" class="btn btn-outline-light ms-4">Entrar</a>
               </li>
             </ul>
           </div>
