design login area

--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
       </nav>
     </header> <!--FIm cabeçalho-->
     <section class="mt-5"> <!-- Area login-->
-      <main class="form-signin w-100 m-auto">
+      <main class="form-signin w-100 m-auto bg-body-secondary">
         <form>
           <h1 class="h3 mb-3 fw-normal">Login</h1>
           <div class="form-floating">
@@ -57,8 +57,12 @@
               lembrar de mim
             </label>
           </div>
-          <button class="btn btn-outline-warning w-100 py-2" type="submit">Entrar</button>
-          <p class="mt-5 mb-3 text-body-secondary">tente por </p>
+          <button class="btn btn-warning w-100 py-2" type="submit">Entrar</button>
+          <p class="mt-3 mb-3 text-body-secondary">
+            entrar com
+            <button class="btn btn-danger"><i class="bi bi-google"></i></button>
+            <button class="btn btn-primary"><i class="bi bi-facebook"></i></button>
+          </p>
         </form>
       </main>
     </section> <!-- Fim area login-->
