--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <a href="index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Recursos</a>
+                <a href="resources.html" class="nav-link">Recursos</a>
               </li>
               <li class="nav-item">
                 <a href="benefits.html" class="nav-link">Benefícios</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Preços</a>
+                <a href="prices.html" class="nav-link">Preços</a>
               </li>
               <li class="nav-item">
                 <a href="login.html" class="btn btn-outline-light ms-4">Entrar</a>
