--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
                 <a href="index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Recursos</a>
+                <a href="#" class="nav-link">Recursos</a>
               </li>
               <li class="nav-item">
                 <a href="benefits.html" class="nav-link">Benefícios</a>
@@ -33,50 +33,38 @@
               <li class="nav-item">
                 <a href="index.html" class="nav-link">Preços</a>
               </li>
+              <li class="nav-item">
+                <a href="login.html" class="btn btn-outline-light ms-4">Entrar</a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
     </header> <!--FIm cabeçalho-->
-    <section class="mt-5"> <!-- Area login-->
-      <main class="form-signin w-100 m-auto bg-body-secondary border border-5 rounded">
-        <form>
-          <h1 class="h3 mb-3 fw-normal">Login</h1>
-          <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="email@example.com">
-            <label for="floatingInput">Endereço de email</label>
-          </div>
-          <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Senha</label>
-          </div>
-      
-          <div class="form-check text-start my-3">
-            <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-            <label class="form-check-label" for="flexCheckDefault">
-              lembrar de mim
-            </label>
-          </div>
-          <button class="btn btn-warning w-100 py-2" type="submit">Entrar</button>
-          <p class="mt-3 mb-3 text-body-secondary">
-            entrar com
-            <button class="btn btn-danger"><i class="bi bi-google"></i></button>
-            <button class="btn btn-primary"><i class="bi bi-facebook"></i></button>
-          </p>
-        </form>
-      </main>
-    </section> <!-- Fim area login-->
+    
     <footer class="mt-4 mb-4">
-      <div class="container text-center">
-        <a href="https://www.linkedin.com/in/daniel-tenório-6471b0244/" class="btn btn-outline-dark ms-2">
-          <i class="bi bi-linkedin"></i>
-        </a>
-        <a href="https://github.com/danielBRTanimacao" class="btn btn-outline-dark ms-2">
-          <i class="bi bi-github"></i>
-        </a>
-        <a href="https://danielbrtanimacao.github.io/danieltenorioportfolio/" class="btn btn-outline-dark ms-2">
-          <i class="bi bi-file-earmark-text-fill"></i>
-        </a>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p>
+              <a href="index.html" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Home</a>
+              <a href="" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Recursos</a>
+              <a href="" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Benefícios</a>
+              <a href="" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Preços</a>
+            </p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-end">
+            <a href="https://www.linkedin.com/in/daniel-tenório-6471b0244/" class="btn btn-outline-dark ms-2">
+              <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://github.com/danielBRTanimacao" class="btn btn-outline-dark ms-2">
+              <i class="bi bi-github"></i>
+            </a>
+            <a href="https://danielbrtanimacao.github.io/danieltenorioportfolio/" class="btn btn-outline-dark ms-2">
+              <i class="bi bi-file-earmark-text-fill"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
