basic js in index

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <form class="mt-4 mb-4">
                 <div class="input-group input-group-lg">
                   <input class="form-control" type="email" placeholder="Seu e-mail" name="get-email" id="emailtxt">
-                  <button type="button" class="btn btn-primary">Cadastre-se</button>
+                  <button type="button" class="btn btn-primary" onclick="redirectEmail()">Cadastre-se</button>
                 </div>
               </form>
               <p>
@@ -168,5 +168,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
