config and update indexs

--- a/benefits.html
+++ b/benefits.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,13 +25,13 @@
                 <a href="index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Recursos</a>
+                <a href="resources.html" class="nav-link">Recursos</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">Benefícios</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Preços</a>
+                <a href="prices.html" class="nav-link">Preços</a>
               </li>
               <li class="nav-item">
                 <a href="login.html" class="btn btn-outline-light ms-4">Entrar</a>
@@ -41,7 +41,10 @@
         </div>
       </nav>
     </header> <!--FIm cabeçalho-->
-    
+    <div class="container text-center">
+      <img src="assets/img/undraw_bug_fixing_oc7a.png" alt="vetor-img" width="400">
+      <h1>Em desenvolvimento...</h1>
+    </div>
     <footer class="mt-4 mb-4">
       <div class="container">
         <div class="row">
