--- a/prices.html
+++ b/prices.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +41,10 @@
         </div>
       </nav>
     </header> <!--FIm cabeçalho-->
-   
+    <div class="container text-center">
+      <img src="assets/img/undraw_bug_fixing_oc7a.png" alt="vetor-img" width="400">
+      <h1>Em desenvolvimento...</h1>
+    </div>
     </section> <!-- Fim seção final-->
     <footer class="mt-4 mb-4">
       <div class="container">
