--- a/userarea.html
+++ b/userarea.html
@@ -13,7 +13,7 @@
     <header> <!--Inicio cabeçalho-->
       <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
-          <a href="index.html" class="navbar-brand">
+          <a href="#" class="navbar-brand">
             <img src="assets/img/logo.png" width="142" alt="finans-img-logo">
           </a>
           <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#principal-nav">
@@ -22,19 +22,19 @@
           <div class="collapse navbar-collapse" id="principal-nav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
+                <a href="#" class="btn btn-outline-light ms-4">Entrar</a> <!-- icon pessoa-->
+              </li>
+              <li class="nav-item">
                 <a href="index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Recursos</a>
+                <a href="#" class="nav-link">Pix</a>
               </li>
               <li class="nav-item">
-                <a href="benefits.html" class="nav-link">Benefícios</a>
+                <a href="#" class="nav-link">Boletos</a>
               </li>
               <li class="nav-item">
-                <a href="prices.html" class="nav-link">Preços</a>
-              </li>
-              <li class="nav-item">
-                <a href="login.html" class="btn btn-outline-light ms-4">Entrar</a>
+                <a href="index.html" class="nav-link">Sair</a>
               </li>
             </ul>
           </div>
