--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,13 +25,13 @@
                 <a href="index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Recursos</a>
+                <a href="resources.html" class="nav-link">Recursos</a>
               </li>
               <li class="nav-item">
                 <a href="benefits.html" class="nav-link">Benefícios</a>
               </li>
               <li class="nav-item">
-                <a href="index.html" class="nav-link">Preços</a>
+                <a href="prices.html" class="nav-link">Preços</a>
               </li>
             </ul>
           </div>
@@ -80,6 +80,5 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>
   </body>
 </html>
