--- a/userarea.html
+++ b/userarea.html
@@ -19,23 +19,13 @@
           <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#principal-nav">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="principal-nav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a href="#" class="btn btn-outline-light ms-4">Entrar</a> <!-- icon pessoa-->
-              </li>
-              <li class="nav-item">
-                <a href="index.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Pix</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Boletos</a>
-              </li>
-              <li class="nav-item">
-                <a href="index.html" class="nav-link">Sair</a>
-              </li>
+          <div class="btn-group" role="group">
+            <a href="#" class="btn btn-outline-light ms-4 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></a> <!-- icon pessoa-->
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Home</a></li>
+              <li><a class="dropdown-item" href="#">Pix</a></li>
+              <li><a class="dropdown-item" href="#">Boletos</a></li>
+              <li><a class="dropdown-item" href="#">Sair</a></li> <!--Aparece um modal-->
             </ul>
           </div>
         </div>
