--- a/userarea.html
+++ b/userarea.html
@@ -16,16 +16,16 @@
           <a href="#" class="navbar-brand">
             <img src="assets/img/logo.png" width="142" alt="finans-img-logo">
           </a>
-          <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#principal-nav">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="btn-group" role="group">
-            <a href="#" class="btn btn-outline-light ms-4 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></a> <!-- icon pessoa-->
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Home</a></li>
+          <div class="dropdown">
+            <a href="#" class="btn btn-outline-light ms-4 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-person-circle fs-2"></i>
+            </a> <!-- icon pessoa-->
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="index.html">Home</a></li>
               <li><a class="dropdown-item" href="#">Pix</a></li>
               <li><a class="dropdown-item" href="#">Boletos</a></li>
-              <li><a class="dropdown-item" href="#">Sair</a></li> <!--Aparece um modal-->
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item text-danger" href="#">Sair</a></li> <!--Aparece um modal-->
             </ul>
           </div>
         </div>
