--- a/userarea.html
+++ b/userarea.html
@@ -31,14 +31,16 @@
         </div>
       </nav>
     </header> <!--FIm cabeçalho-->
-    <section class="container row"> <!--BEm vindo de volta-->
-      <img class="col-md-7 img-fluid" src="assets/img/undraw_Powerful_re_frhr.png" alt="img-vetor">
-      <h1 class="col-md-5 d-flex justify-content-center align-items-center display-1">Bem vindo, Usuario!</h1>
+    <section class="container mt-5 border-top border-warning rounded-top border-5"> <!--BEm vindo de volta-->
+      <div class="row">
+        <img class="col-md-7 img-fluid" src="assets/img/undraw_Powerful_re_frhr.png" alt="img-vetor">
+        <h1 class="col-md-5 d-flex justify-content-center align-items-center display-1">Bem vindo, Usuario!</h1>
+      </div>
     </section> <!-- Fim Bem vindo de volta-->
-    <div class="container text-center">
-      <img src="assets/img/undraw_bug_fixing_oc7a.png" alt="vetor-img" width="400">
-      <h1>Em desenvolvimento...</h1>
-    </div>
+
+    <section> <!--Area Pix-->
+
+    </section> <!-- Fim Area pix-->
     <footer class="mt-4 mb-4">
       <div class="container">
         <div class="row">
